Add memory card game

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <span class="icon">✏️</span> Complete Sentences
                 <span class="description">Practice by filling in the blanks</span>
             </a>
+
+            <a href="cards.html" class="menu-item">
+                <span class="icon">🎮</span> Memory Card Game
+                <span class="description">Match words with their images</span>
+            </a>
         </div>
     </div>
 </body>
